<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>ron190</groupId>
    <artifactId>jsql-injection</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>model</module>
        <module>view</module>
    </modules>

    <properties>
        <revision>v0.91</revision>
        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>

        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>

        <sonar.organization>ron190-github</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.java.binaries>target/classes</sonar.java.binaries>
        <sonar.java.source>11</sonar.java.source>

        <commons-text.version>1.10.0</commons-text.version>
        <jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
        <log4j-bom.version>2.20.0</log4j-bom.version>
        <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>

        <skipTests>true</skipTests>
        <skipITs>true</skipITs>
    </properties>

    <profiles>
        <profile>
            <!-- Tests are disabled for scans by default, profile restores the tests -->
            <id>tests</id>
            <properties>
                <skipTests>false</skipTests>
                <skipITs>false</skipITs>
            </properties>
        </profile>
    </profiles>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>${log4j-bom.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <!-- Unescape unicode encoding -->
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <!-- Generate reports for Sonar and Codecov -->
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/jacoco-unit.exec</destFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>prepare-agent-integration</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/jacoco-integration.exec</destFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>merge</goal>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <!-- merge config -->
                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                            <fileSets>
                                <fileSet>
                                    <directory>${project.build.directory}</directory>
                                    <includes>
                                        <include>**/*.exec</include>
                                    </includes>
                                </fileSet>
                            </fileSets>
                            <!-- report config -->
                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <excludes>
                        <exclude>**/graphql/QueryMethodAccess.class</exclude>
                        <exclude>**/graphql/PostMethodAccess.class</exclude>
                        <exclude>**/graphql/PostResolverMethodAccess.class</exclude>
                        <exclude>**/graphql/AuthorMethodAccess.class</exclude>
                        <exclude>**/graphql/AuthorResolverMethodAccess.class</exclude>
                        <exclude>**/graphql/MutationMethodAccess.class</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <!-- Manage version revision properly -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>